hopeful fixing of all z-indexes to fix logo issue

--- a/styles/global.less
+++ b/styles/global.less
@@ -61,21 +61,21 @@ footer {
 /* LAYOUT (WIDTHS & PADDING)
 ************************************************/
 
-#bannerImage { position: absolute; top: 0; left: 0; right: 0; height: @bannerImageHeight; z-index: 9; }
+#bannerImage { position: absolute; top: 0; left: 0; right: 0; height: @bannerImageHeight; z-index: 0; }
 #bannerImage.default-background { .banner-image; background-color: @bannerBackground; }
 .banner-overlay { position: absolute; top: 0; right: 0; bottom: 0; left: 0; background-color: @bannerOverlayColor; }
 
-#header { position: relative; z-index: 11; }
+#header { position: relative; }
 .navigation-position-fixed {
-  #header #topNav { position: fixed; top: 0; left: 0; width: 100%; }
+  #header #topNav { position: fixed; top: 0; left: 0; width: 100%; z-index: 13!important; }
   #logo { margin-top: @nav-font-font-size + @navPadding; }
 }
-#logo { margin: 0 auto; width: @siteWidth;
+#logo { z-index: 2; margin: 0 auto; width: @siteWidth;
   > .wrapper { padding: @bannerPaddingT @bannerPaddingLR @bannerPaddingB; text-align: center; }
 }
 
 
-#canvas { width: @siteWidth; margin: 0 auto; position: relative; z-index: 10; }
+#canvas { width: @siteWidth; margin: 0 auto; position: relative; z-index: 12; }
 
 
 #wrapper { position: relative; padding: @pagePaddingTB (@pagePaddingLR + 12); }
